--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="left-container">
                 <!-- Content for the left container goes here -->
-            <img src = D:/Personal/ProfPic.jpg class = "image-border">
+            <img src = https://github.com/jgorman4/Portfolio/blob/master/ProPic.jpg class = "image-border">
             <h2>Joseph Gorman</h2>
             
             <div class="social-menu">
