--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h3 class = "wipe-in"> Education</h3>
 
                 <div class = "wipe-in" id = "AngeloState">
-                    <img src= "D:/Personal/CodingProjects/asulogo.png" class = "wipe-in">
+                    <img src= https://github.com/jgorman4/Portfolio/blob/master/asulogo.png?raw=true class = "wipe-in">
                     <p class = "wipe-in">Angelo State University</p>
                         <div class = "wipe-in" id = "AngeloStateTxt">
                             <p2 class = "wipe-in"> Bachelor of Science in Natural Resource Management</p2>
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class = "wipe-in" id = "ClemsonUni">
-                    <img src= "D:/Personal/CodingProjects/ClemsonPaw_RGB__Orange.png" class = "wipe-in">
+                    <img src= https://github.com/jgorman4/Portfolio/blob/master/ClemsonPaw_RGB__Orange.png?raw=true class = "wipe-in">
                     <p class = "wipe-in">Clemson University</p>
                     <div class = "wipe-in" id = "ClemsonUniTxt">
                         <p2 class = "wipe-in"> Master of Wildlife and Fisheries Resources</p2>
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class = "wipe-in" id = "NWMSU">
-                    <img src= "D:/Personal/CodingProjects/nwmsu.png" class = "wipe-in">
+                    <img src= https://github.com/jgorman4/Portfolio/blob/master/nwmsu.png?raw=true class = "wipe-in">
                     <p class = "wipe-in">Northwest Missouri State University</p>
                     <div class = "wipe-in" id = "nwmsuTxt">
                         <p5 class = "wipe-in"> Master of Science <span class = "wrap-trigger"></span> in Geographic Information Science</p5>
