--- a/index.html
+++ b/index.html
@@ -91,7 +91,44 @@
             </div>
             
             <div class="box" id="experience_box">
-                i223
+                <h4 class = "wipe-in" > Experience </h4>
+                <div class="wipe-in" id="TFS">
+                    <h1 class="wipe-in">Geospatial Specialist </h1>
+                    <p1 class="wipe-in">Texas A&M Forest Service (July 2023 - Present)</p1>
+                    <p2 class="wipe-in">College Station, Texas</p2>
+                    <ul>
+                        <li class="wipe-in">Created high-quality, dynamic dashboards for internal and external audiences</li>
+                        <li class="wipe-in">Refined and automated methodologies for analysis in Urban Forestry using Python and ModelBuilder</li>
+                        <li class="wipe-in">Acquired and organized data into various spatial and non-spatial databases</li>
+                        <li class="wipe-in">Trained staff on the use of ESRI Suite products</li>
+                    </ul>
+                </div>
+                
+                <div class="wipe-in" id="NRCS">
+                    <h1 class="wipe-in">Rangeland Management Specialist</h1>
+                    <p1 class="wipe-in">Natural Resources Conservation Service - USDA (July 2020 - June 2022)</p1>
+                    <p2 class="wipe-in">Ozona, Texas</p2>
+                    <ul>
+                        <li class="wipe-in">Served as rangeland consultant to numerous ranchers in assigned area</li>
+                        <li class="wipe-in">Assembled and evaluated vegetation data relating to forage yields and composition changes</li>
+                        <li class="wipe-in">Provided landowners evaluations of their resources and designed conservation plans according to their goals</li>
+                        <li class="wipe-in">Collaborated with peers across the State to accomplish training requirements and career development</li>
+                    </ul>
+                </div>
+
+                <div class="wipe-in" id="Army">
+                    <h1 class="wipe-in">Geospatial Imagery Analyst</h1>
+                    <p1 class="wipe-in">Texas Army National Guard (December 2015 - December 2021)</p1>
+                    <p2 class="wipe-in">Austin, Texas</p2>
+                    <ul>
+                        <li class="wipe-in">Analyzed satellite and airborne imagery using intelligence gathering techniques</li>
+                        <li class="wipe-in">Produced high quality, accurate maps for key command decision makers </li>
+                        <li class="wipe-in">Identifed key mission targets and equipment using satellite and airborne imagery</li>
+                        <li class="wipe-in">Maintained a Top Secret security clearance for classified projects and operations</li>
+                    </ul>
+                </div>
+
+
             </div>
             <div class="box" id="portfolio_box">
                 25274
