--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li class="nav-item" onclick="openBox('experience_box', this)">Experience</li>
                 <li class="nav-item" onclick="openBox('portfolio_box', this)">Portfolio</li>
             </ul>
-            <p> Hello there! I am <span class = "intel-Text">Geospatial Specialist </span> with the Texas A&M Forest Service. I have developed a passion
+            <p> Hello there! I am a <span class = "intel-Text">Geospatial Specialist </span> with the Texas A&M Forest Service. I have developed a passion
                 for solving complex natural resource issues with various geospatial plaforms and tools, especially as it pertains to wildlife conservation.
                 This passion grew from my combined experience as an <span class = "intel-Text"> Imagery Intelligence Anaylst</span> 
                 for the Army National Guard, a <span class = "intel-Text">Rangeland Conservationist</span> for the USDA-NRCS, and from undergraduate and graduate degrees.
